--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="wrapper">
-    <h1>Finance Logger</h1>
+    <h1>Learning Type Script</h1>
 
     <!-- output list -->
     <ul class="item-list">
@@ -40,7 +40,7 @@
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    <a href="https://www.thenetninja.co.uk">Dj Florien</a>
   </footer>
 
   <script src='sandbox.js'></script>
